--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -192,9 +192,11 @@ git = 'https://github.com/paritytech/substrate.git'
 branch = 'rococo-v1'
 version = '3.0.0'
 
-[dependencies.bridge]
-package = 'pallet-bridge'
-path = '../pallets/bridge'
+[dependencies.pallet-gateway]
+path = '../pallets/gateway'
+
+[dependencies.pallet-price-fetch]
+path = '../pallets/price-fetch'
 
 [dependencies.fp-currency]
 default-features = false
